--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "prettier": "^3.7.4",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.5"
   },
